--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,11 +20,22 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>The purpose of our company is to be able to have our customers apreciate nature and water at reasonable prices.</p>
+    <p>The purpose of our company is to be able to have our customers appreciate nature and the rich histort
+      that surrounds the area. This is also an opportunity to have customers enjoy a rush of adrenaline.
+    </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Anyone ages 12-65 that enjoys nature and learning about the history that surrounds the rafting tours we go on.</p>
+    <p>Anyone ages 12-65 that enjoys nature and learning about the history that surrounds the rafting tours we go on.
+      These tours are for those who wish to have the thrill of waves and fast movement. Proper safety will be tought
+      before we head into the water.
+      </p>
+      <p>
+      *Parties above 15 must call ahead of time.
+    </p>
+    <p>
+      **Discounts are available.
+    </p>
     <!-- change this -->
 
     <hr />
