--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -133,7 +133,10 @@
 
     <h3>[Page 2]</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/Screenshot (79).png" alt="page 2 wireframe">
+    <img src="images/Screenshot (80).png" alt="page 2 wireframe">
+    <img src="images/Screenshot (81).png" alt="page 2 wireframe">
+    <img src="images/Screenshot (82).png" alt="page 2 wireframe">
   </main>
 </body>
 
